<resources>
    <string name="app_name">TutorMe</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="Message_fragment"> Message Fragment</string>
    <string name="Calender_fragment"> Calender Fragment</string>
    <string name="tutorme">TutorMe</string>
    <string name="save">Save</string>
    <string name="title">Title</string>
    <string name="write_your_notes_here">Write your notes here</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="sign_up">Sign UP</string>
    <string name="sign_in">Sign In</string>
    <string name="email">Email</string>
    <string name="register">register</string>
    <string name="already_have_an_account">Already Have An Account?</string>
    <string name="add_new_session">Add New Session</string>
    <string name="netid">NetID</string>
    <string name="name">Name</string>
    <string name="locatoin">Locatoin</string>
    <string name="location">location</string>
    <string name="Location">Location</string>
    <string name="enter_a_description_about_yourself">Enter A Description About Yourself</string>
    <string name="send_invite">Send Invite</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>