<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".RegisterActivity"
    android:background="@color/mycolor">

    <EditText
        android:id="@+id/registerEmail"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:background="@drawable/login_edit_background"
        android:backgroundTint="@color/white"
        android:layout_marginTop="40dp"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:textColor="@color/black"
        android:padding="10dp"

        android:hint="@string/email"/>

    <EditText
        android:id="@+id/registerNetID"
        app:layout_constraintTop_toBottomOf="@id/registerEmail"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:background="@drawable/login_edit_background"
        android:backgroundTint="@color/white"
        android:layout_marginTop="20dp"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:hint="@string/netid"
        android:textColor="@color/black"
        android:padding="10dp"
        />

    <EditText
        android:id="@+id/registerPassWord"
        app:layout_constraintTop_toBottomOf="@id/registerNetID"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:background="@drawable/login_edit_background"
        android:backgroundTint="@color/white"
        android:layout_marginTop="20dp"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:hint="@string/password"
        android:textColor="@color/black"
        android:padding="10dp"
        />

    <EditText
        android:id="@+id/registerLocation"
        app:layout_constraintTop_toBottomOf="@id/registerPassWord"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:background="@drawable/login_edit_background"
        android:backgroundTint="@color/white"
        android:layout_marginTop="20dp"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:hint="@string/Location"
        android:textColor="@color/black"
        android:padding="10dp"
        />
    <EditText
        android:id="@+id/registerName"
        app:layout_constraintTop_toBottomOf="@id/registerLocation"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:background="@drawable/login_edit_background"
        android:backgroundTint="@color/white"
        android:layout_marginTop="20dp"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:hint="@string/name"
        android:textColor="@color/black"
        android:padding="10dp"
        />


    <Button
        android:id="@+id/register"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        app:layout_constraintTop_toBottomOf="@id/registerName"
        android:layout_marginTop="20dp"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:backgroundTint="@color/register"
        android:text="@string/register"
        android:textColor="@color/black"/>

    <TextView
        android:id="@+id/message"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/already_have_an_account"
        android:textColor="@color/white"
        app:layout_constraintTop_toBottomOf="@id/register"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginTop="10dp"/>




</androidx.constraintlayout.widget.ConstraintLayout>