<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".EditNoteFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <EditText
            android:id="@+id/editTitle"
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:textSize="30sp"
            android:layout_marginLeft="10dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:layout_marginStart="10dp"
            android:hint="@string/title"/>

        <EditText
            android:id="@+id/editDetail"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="@id/editTitle"
            app:layout_constraintTop_toBottomOf="@id/editTitle"
            android:textSize="20sp"
            android:hint="@string/write_your_notes_here"
            />
        
        <Button
            android:id="@+id/saveButton"
            android:layout_width="80dp"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toEndOf="@id/editTitle"
            app:layout_constraintTop_toTopOf="parent"
            android:layout_marginLeft="10dp"
            android:text="@string/save"
            android:backgroundTint="@color/mycolor"/>

    </androidx.constraintlayout.widget.ConstraintLayout>



</FrameLayout>