<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".LoginActivity">
    
    <EditText
        android:id="@+id/email"
        app:layout_constraintBottom_toBottomOf="@id/userIcon"
        app:layout_constraintLeft_toRightOf="@id/userIcon"
        android:layout_width="match_parent"
        android:layout_height="45dp"
        android:background="@drawable/login_edit_background"
        android:padding="10dp"
        android:layout_marginLeft="70dp"
        android:layout_marginRight="20dp"
        android:hint="@string/email"

        />

    <ImageView
        android:id="@+id/userIcon"
        android:layout_marginBottom="180dp"
        android:layout_width="40dp"
        android:layout_height="40dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:background="@drawable/user"
        android:layout_marginTop="3dp"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        />
    <EditText
        android:id="@+id/password"
        app:layout_constraintTop_toBottomOf="@id/email"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_width="match_parent"
        android:layout_height="45dp"
        android:background="@drawable/login_edit_background"
        android:padding="10dp"
        android:layout_marginLeft="70dp"
        android:layout_marginRight="20dp"
        android:layout_marginTop="20dp"
        android:hint="@string/password"
        android:inputType="textPassword"
        android:maxLines="1"
        />

    <ImageView
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:background="@drawable/password"
        app:layout_constraintTop_toBottomOf="@id/userIcon"
        app:layout_constraintLeft_toLeftOf="@id/userIcon"
        android:layout_marginTop="20dp"/>

    <Button
        android:id="@+id/loginButton"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/white"
        android:text="@string/login"
        android:textColor="@color/black"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginLeft="50dp"
        android:layout_marginTop="100dp"/>
    <Button
        android:id="@+id/SignUpButton"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/edit"
        android:textColor="@color/black"
        app:layout_constraintLeft_toRightOf="@id/loginButton"
        app:layout_constraintTop_toTopOf="@id/loginButton"
        android:layout_marginLeft="10dp"
        android:text="@string/sign_up"
        android:layout_marginStart="10dp" />

    <Button
        android:id="@+id/SignInButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="90dp"
        android:layout_marginRight="90dp"
        android:layout_marginBottom="50dp"
        android:background="@drawable/button_background"
        android:text="@string/sign_in"
        android:textAllCaps="false"
        app:backgroundTint="#1D3BE4"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent" />

    <ImageView
        android:layout_width="200dp"
        android:layout_height="200dp"
        android:background="@drawable/login_icon"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginTop="190dp"
        app:layout_constraintRight_toRightOf="parent"
        />


</androidx.constraintlayout.widget.ConstraintLayout>